--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             staying active, and exploring new places.
             </p>
             <p>
-            Feel free to check out my resume (CV), browse some of my projects, or just learn a bit more about me. 
+            Feel free to check out my resume (CV), browse some of my projects, or just learn a bit more about me. This is a work in progress.
             If you'd like to connect, please reach out via email at <a href="mailto:oadeloye2@gmail.com">oadeloye2@gmail.com</a>.
             </p>
             <p>Thanks for stopping by!</p>
