--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body >
         <div id="nav"></div>
         <main class="body">
-            <h3><u>Masters of Science in School Counseling	 May 2016</u></h3>
+            <h3><u>Masters of Science in School Counseling</u></h3>
             <p>Eastern Illinois University (Charleston, IL)<br></br>
             Professional Education License (PEL) <br></br>
             Graduated: May 2016
