--- a/picture.html
+++ b/picture.html
@@ -19,6 +19,7 @@
             <img src="picture/drink.jpg" alt="drink"   onclick="enlarge(this)" />
             <img src="picture/flower.jpg" alt="flower"  onclick="enlarge(this)"  />
             <img src="picture/scene.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/scene.jpg" alt="scene"  onclick="enlarge(this)"  />
         </div>
             <div id="lightbox" onclick="closeBox()">
             <img id="box_image" src=""  alt="enlarge photo"/>
