--- a/picture.html
+++ b/picture.html
@@ -19,7 +19,16 @@
             <img src="picture/drink.jpg" alt="drink"   onclick="enlarge(this)" />
             <img src="picture/flower.jpg" alt="flower"  onclick="enlarge(this)"  />
             <img src="picture/scene.jpg" alt="scene"  onclick="enlarge(this)"  />
-            <img src="picture/scene.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/me.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/man.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/pizza.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/ruin.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/horse.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/hill.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/caditral.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/col.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/three.jpg" alt="scene"  onclick="enlarge(this)"  />
+            <img src="picture/trunk.jpg" alt="scene"  onclick="enlarge(this)"  />
         </div>
             <div id="lightbox" onclick="closeBox()">
             <img id="box_image" src=""  alt="enlarge photo"/>
