--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
             <h1>Work experience Here</h1>
             <div id="abby">
                 <h2>St. Joseph Catholic Academy</h2>
-                <h4>Director of Counseling - St. Joseph Catholic Academy</h4> 
+                <h4>School Counselor - St. Joseph Catholic Academy</h4> 
                 <p><strong>Locaton: </strong>Kenosha,WI, USA</p>
                 <p><strong>Dates:</strong> August 2023-present</p>
                 <ul>
