--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Bukunmi A. |Personal Site</title>
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -20,12 +21,38 @@
             staying active, and exploring new places.
             </p>
             <p>
-            Feel free to check out my resume (CV), browse some of my projects, or just learn a bit more about me. This is a work in progress.
+                So, let’s talk about how I got to where I am. I got my master's degree in school counseling in 2016. 
+                I also sat and passed the NCE exam; that’s for community counseling. But I didn’t feel like community
+                 counseling was my calling. I was more passionate about School counseling. Anyway, I started working 
+                 as a school counselor that same year, and I did the job for about 9 years in various roles, but in 
+                 the same field. My interest in coding came from my friends, my DND friends. I started playing Dungeons
+                  and Dragons during the pandemic, courtesy of a friend who introduced me to the group. Many of the
+                   participants were coders, and they talked about their jobs. I wanted to understand what they were 
+                   talking about, so I started taking some coding classes. I started with Python. I had no idea what the 
+                   language was about, despite being able to complete the assignments. Afterward, I took an HTML and CSS
+                    class, and that was when it started to click. I am a visual person, and HTML is mostly visual; I can
+                     see the output of the code. Then I took HTML, which is a front-end language and can be used in combination 
+                     with HTML. I always thought coders memorize all the languages, but I am now finding out that it’s helpful 
+                     to have a refresher with any new language you’re writing. Also, the majority of the languages are quite 
+                     similar. For instance, they mostly have functions/methods. They all have ways of declaring an object. 
+                     Most of them differentiate between integers and strings. Overall, the experience has been great and my goal 
+                     this summer is to create projects with this languages and add to my website. React will be a difficult since 
+                     the file would be larger than Github would allow. Anyway, Journey before destination, Radiant! 
+            </p>
+            <p>
+            Feel free to check out my resume (CV), browse some of my projects, or just learn a bit more about me. 
             If you'd like to connect, please reach out via email at <a href="mailto:oadeloye2@gmail.com">oadeloye2@gmail.com</a>.
             </p>
             <p>Thanks for stopping by!</p>
-    
             
+            <div class="pics">
+            <img  src="picture/dnd.jpg" alt="dnd" onclick="enlarge(this)"/>
+            <p>This is how the idea began</p>
+            </div>
+                <div id="lightbox" onclick="closeBox()"><br>
+                <img id="box_image" src=""  alt="enlarge photo"/>
+                </div>
+
         </main>
         <div id="footing"></div>
         <script src="script.js" defer></script>
