--- a/nav.html
+++ b/nav.html
@@ -1,12 +1,13 @@
 <header>
     <h1>Welcome to my page</h1>
-    <p>"The longer you live, the more you fail. Failure is the mark of a life well lived. 
+    <p id="hoid">"The longer you live, the more you fail. Failure is the mark of a life well lived. 
         In turn, the only way to live without failure is to be of no use to anyone." - Hoid (The Cosmere) </p>
        <img src="picture/drink.jpg" alt="drink" class="nav-logo" />
-    <nav>
+    <nav style="font-size: xx-large;">
         <a href="index.html">Home</a>&nbsp;
         <a href="about.html">Education</a>&nbsp;
         <a href="work.html">Work</a>&nbsp;
         <a href="picture.html">Picture</a>&nbsp;
+        <a href="workout2.html">Exercise</a>&nbsp;
     </nav>
 </header>
