--- a/nav.html
+++ b/nav.html
@@ -8,6 +8,6 @@
         <a href="about.html">Education</a>&nbsp;
         <a href="work.html">Work</a>&nbsp;
         <a href="picture.html">Picture</a>&nbsp;
-        <a href="workout2.html">Exercise</a>&nbsp;
+        <a href="workout.html">Exercise</a>&nbsp;
     </nav>
 </header>
