--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Welcome to my page</h1>
-    <p id="hoid">"The longer you live, the more you fail. Failure is the mark of a life well lived. 
+    <p id="hoid">"The longer you live, the more you fail. Failure is the mark of a life well-lived. 
         In turn, the only way to live without failure is to be of no use to anyone." - Hoid (The Cosmere) </p>
        <img src="picture/drink.jpg" alt="drink" class="nav-logo" />
     <nav style="font-size: xx-large;">
