--- a/workout.html
+++ b/workout.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-   
     <head>
-        <title>Workout List </title>
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <title>Bukunmi A. |Personal Site</title>
         <link rel="stylesheet" href="style.css" />
-
     </head>
-    <body> 
+    <body >
         <div id="nav"></div>
     <main class="body">
          <div style="text-align: center;">
