--- a/workout.html
+++ b/workout.html
@@ -8,7 +8,7 @@
         <div id="nav"></div>
     <main class="body">
          <div style="text-align: center;">
-            <h2>This is the workout page!!</h2>
+            <h2>This is my workout page!!</h2>
         <p>So I enjoy working out and this is my workout plan for the last couple of years<br>
         I do know that I have to update my workout plans but, it's what I have for now. So... enjoy!!
         </p>
