--- a/picture.html
+++ b/picture.html
@@ -8,8 +8,8 @@
     <body >
         <div id="nav"></div>
         <main class="body">
-            <h1>This is the Picture area</h1>
-            <h2 id="italy">Trip to Italy</h2>
+            <h1>This is the Picture page</h1>
+            <h2 id="italy">My latest trip</h2>
         <div class="pics">
             <img src="picture/blow.jpg" alt="blow"  onclick="enlarge(this)" />
             <img src="picture/agent.jpg" alt="agent"   onclick="enlarge(this)" />
